# Bifrost-AI

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
docs/: AGUI-入口与DC标准请求响应对照分析.md  ARCH-01-模块架构与职责说明.md  ARCH-02-上下文模型与交互协议.md  ARCH-03-Workflow配置化执行与可视化MVP设计.md  ARCH-04-A2UI富交互输出协议设计.md  ARCH-05-Agent能力开放与Skill接入架构设计.md  ARCH-06-内部标准事件协议.md  PRD-01-cn.md
