[project]
name = "agentic-workflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk==0.3.13",
    "ag-ui-langgraph>=0.0.41",
    "ag-ui-protocol==0.1.19",
    "aiokafka>=0.14.0",
    "confluent-kafka>=2.14.2",
    "fastapi>=0.137.2",
    "httpx>=0.28.1",
    "langchain==1.2.15",
    "langchain-openai>=1.3.2",
    "langgraph==1.1.6",
    "langgraph-checkpoint-redis>=0.4.1",
    "pydantic-settings>=2.14.1",
    "pymysql>=1.2.0",
    "redis<8.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]

[tool.uv.workspace]
members = [
    "dialogue-control",
    "llm-agent",
    "workflow-engine",
    "open-agent-layer/auth-gateway",
    "open-agent-layer/open-gateway",
]
